Fix collapse style

--- a/src/Components/ComponentsStyles/_Collapse.scss
+++ b/src/Components/ComponentsStyles/_Collapse.scss
@@ -1,10 +1,6 @@
-.collapseContainer {
-	max-width: 82%;
-	height: 47px;
-	margin: 31px auto 0;
-}
-
 .collapse {
+	width: 100%;
+	margin: 31px auto 0;
 	&__visible {
 		background: #ff6060;
 		color: white;
@@ -15,22 +11,22 @@
 		height: 47px;
 		padding: 7px 15px;
 		border-radius: 5px;
+		width: 100%;
 
 		h2 {
 			font-size: 20px;
 		}
 	}
-
 	&__toggle {
 		font-size: 18px;
-		max-width: 82%;
-		margin: auto;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 142.6%;
 		opacity: 0;
 		color: #ff6060;
 		background: #f6f6f6;
 		border-radius: 5px;
 		transition: opacity 0.4s ease-in-out, height 0.4s 0.4s ease-in-out;
-
 		p {
 			margin: 0;
 			padding: 22px 15px;
@@ -39,12 +35,10 @@
 		}
 	}
 }
-
 .animated {
 	opacity: 1;
 	transition: height 0.4s ease-in-out, opacity 0.4s 0.4s ease-in-out;
 }
-
 .chevron {
 	width: 15px;
     transform: rotate(0deg);
@@ -52,6 +46,20 @@
 }
 
 .rotated {
-		transform: rotate(180deg);
-		transition: 0.4s ease-in-out;
-	}
+	transform: rotate(180deg);
+	transition: 0.4s ease-in-out;
+}
+
+.about-style {
+	width: 87.5%;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fiche-style {
+	margin-top: 31px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
