--- a/src/Components/ComponentsStyles/_Tag.scss
+++ b/src/Components/ComponentsStyles/_Tag.scss
@@ -1,8 +1,7 @@
 .tagContainer {
     display: flex;
-
+    
 }
-
 .tagButton {
     display: flex;
     background: #FF6060;
@@ -11,10 +10,10 @@
     font-style: normal;
     font-weight: 500;
     line-height: 142.6%;
-    width: 115px;
     height: 25px;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
     margin-right: 10px;
+    padding: 2px 10px 0 10px
 }
