--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -84,4 +84,5 @@
 .collapse-fiche-container {
 	display: flex;
     width: 100%;
+	gap: 6%;
 }
